[workspace]
resolver = "2"
members = [
    "nostrdb_rs",
    "nostrdb_net",
]

[workspace.dependencies]
bech32 = { version = "0.11", default-features = false }
dirs = "5.0.1"
hex = "0.4.3"
libc = "0.2.151"
nostrdb_net = { path = "nostrdb_net" } 
nostrdb = { path = "nostrdb_rs" } 
nostr = { version = "0.37.0", default-features = false, features = ["std", "nip49"] }
serde_derive = "1"
serde_json = "1.0.89"
serde = { version = "1", features = ["derive"] }
tempfile = "3.13.0"
thiserror = "2.0.7"
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
#tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
