[package]
name = "nostrdb"
authors = ["William Casarin <jb55@jb55.com>"]
description = "An unfairly fast embedded nostr database backed by lmdb"
readme = "README.md"
version = "0.8.0"
edition = "2021"
build = "build.rs"
license = "GPL-3.0-or-later"
homepage = "https://github.com/damus-io/nostrdb-rs/"
repository = "https://github.com/damus-io/nostrdb-rs/"

[build-dependencies]
cc = "1.0"
bindgen = "0.69.1"
libsodium-sys-stable = { version = "1.22.5", features = ["optimized", "minimal"] }

[features]
bindgen = []

[dependencies]
flatbuffers = "23.5.26"
libc = "0.2.151"
thiserror = "2.0.7"
futures = "0.3.31"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.40"
libsodium-sys-stable = { version = "1.22.5", features = ["optimized", "minimal"] }

[dev-dependencies]
hex = "0.4.3"
